; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/twa/extr_tw_osl_freebsd.c_twa_teardown_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/twa/extr_tw_osl_freebsd.c_twa_teardown_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.twa_softc = type { i32*, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @twa_teardown_intr(%struct.twa_softc* %0) #0 {
  %2 = alloca %struct.twa_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.twa_softc* %0, %struct.twa_softc** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.twa_softc*, %struct.twa_softc** %2, align 8
  %5 = getelementptr inbounds %struct.twa_softc, %struct.twa_softc* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %26

8:                                                ; preds = %1
  %9 = load %struct.twa_softc*, %struct.twa_softc** %2, align 8
  %10 = getelementptr inbounds %struct.twa_softc, %struct.twa_softc* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %26

13:                                               ; preds = %8
  %14 = load %struct.twa_softc*, %struct.twa_softc** %2, align 8
  %15 = getelementptr inbounds %struct.twa_softc, %struct.twa_softc* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.twa_softc*, %struct.twa_softc** %2, align 8
  %18 = getelementptr inbounds %struct.twa_softc, %struct.twa_softc* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.twa_softc*, %struct.twa_softc** %2, align 8
  %21 = getelementptr inbounds %struct.twa_softc, %struct.twa_softc* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @bus_teardown_intr(i32 %16, i64 %19, i32* %22)
  store i32 %23, i32* %3, align 4
  %24 = load %struct.twa_softc*, %struct.twa_softc** %2, align 8
  %25 = getelementptr inbounds %struct.twa_softc, %struct.twa_softc* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %13, %8, %1
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @bus_teardown_intr(i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
